# GPSreciever

./: ARCHITECTURE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  nightly.yml
docs/: GNSS_Twin_Operation_Guide.docx  PROJECT_DOCUMENTATION.md
gnss_twin/: __init__.py  config.py  logger.py  models.py  plots.py  visibility.py
gnss_twin/attacks/: __init__.py  base.py  jamming.py  pipeline.py  spoofing.py
gnss_twin/integrity/: __init__.py  flags.py  raim.py  report.py
gnss_twin/meas/: __init__.py  clock_models.py  iono_klobuchar.py  models.py  multipath.py  noise.py  pseudorange.py  tropo_saastamoinen.py
gnss_twin/nmea/: __init__.py  neo_m8n_output.py  nmea_formatter.py
gnss_twin/plots/: __init__.py  conops_plots.py
sim/: __init__.py  cli.py  desktop_gui.py  gui_app.py  live_runner.py  phase1_exit_checklist.py  phase3_exit_checklist.py  run_static_demo.py  run_table.py  scenario_jam_then_reacquire.py  scenario_runner.py  scenario_runner_gui.py  scenario_spoof_then_reacquire.py
tests/: conftest.py  test_alarm_semantics.py  test_atm_correction.py  test_attack_param_aliases.py  test_attack_param_parsing.py  test_attack_telemetry.py  test_attacks_interface.py  test_build_engine_with_truth.py  test_config_defaults.py  test_conops_baseline_sanity.py  test_conops_state_machine.py  test_desktop_gui_import.py  test_desktop_gui_layout.py  test_desktop_gui_save_outputs.py  test_ekf_nav.py  test_engine_step.py  test_error_models.py  test_gating.py  test_gui_attack_validation.py  test_gui_readiness_contracts.py  test_holdover_monitor.py  test_integrity.py  test_integrity_flags.py  test_interfaces.py  test_jamming_attack.py  test_live_runner.py  test_live_runner_spoof_ramp.py  test_logging_plots.py  test_measurement_batch_api.py  test_mode5_authenticator.py  test_models.py  test_monte_carlo_metrics.py  test_neo_m8n_output.py  test_nis_monitor.py  test_nmea_csv.py  test_nmea_formatter.py  test_no_fix_dop_is_nan.py  test_no_plots_no_pandas.py  test_positioning_scenarios.py  test_pseudorange.py  (+17 more)
(+40 files in other folders)
