[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnss-twin"
version = "0.1.0"
description = "GNSS digital twin playground"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "scipy",
    "matplotlib",
    "pandas",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
gui = [
    "PyQt6>=6.5",
    "pandas",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gnss_twin*", "sim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
